<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".persegi_panjang">

    <ImageView
        android:id="@+id/bahanatas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="-73dp"
        android:layout_marginEnd="-1dp"
        app:srcCompat="@drawable/bahanatas"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/roket"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/roket"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:fontFamily="@font/pbold"
        android:text="@string/deskripsi"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:fontFamily="@font/pbold"
        android:text="@string/judul"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/back_persegi_panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/back"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="227dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="171dp"
        app:srcCompat="@drawable/persegi_panjang"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/rumus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="37dp"
        android:fontFamily="@font/pbold"
        android:text="@string/rumus_luas_persegi_panjang"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/edt_panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_lebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="167dp"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="268dp"
        android:fontFamily="@font/pbold"
        android:text="@string/panjang" />

    <TextView
        android:id="@+id/tv_lebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="205dp"
        android:fontFamily="@font/pbold"
        android:text="@string/lebar" />

    <Button
        android:id="@+id/btn_hitung_persegi_panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="117dp"
        android:text="@string/hitung" />

    <TextView
        android:id="@+id/tv_hasil_persegi_panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginBottom="79dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/hasil"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-72dp"
        app:srcCompat="@drawable/rectangel"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="32dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="82dp"
        android:layout_marginBottom="35dp"
        app:srcCompat="@drawable/roket"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/pbold"
        android:text="@string/judul"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/desripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp"
        android:text="@string/deskripsi"
        android:textColor="@color/white"
        android:textSize="12sp" />



</RelativeLayout>