<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bahanatas"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="-40dp"
        app:srcCompat="@drawable/bahanatas"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/roket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/roket"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:fontFamily="@font/pbold"
        android:text="@string/judul"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/desripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/deskripsi"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="216dp"
        android:fontFamily="@font/pbold"
        android:text="@string/login"
        android:textColor="@color/merah"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="254dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_pasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="224dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="82dp"
        android:layout_marginBottom="204dp"
        android:text="@string/lupa_pw"
        android:textColor="@color/purple_500" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="147dp"
        android:text="@string/login" />

    <ImageView
        android:id="@+id/bahanbawah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-10dp"
        android:layout_marginBottom="-34dp"
        app:srcCompat="@drawable/rectangel"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@id/roket"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="143dp"
        android:layout_marginBottom="52dp"
        app:srcCompat="@drawable/roket"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@id/desripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/pbold"
        android:text="@string/deskripsi"
        android:textColor="@color/white"
        android:textSize="16sp" />


</RelativeLayout>